src- Version 4.19/objects/Transaction__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <fields>
        <fullName>AVS_Response_Code__c</fullName>
        <label>AVS Response Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVS_Zip__c</fullName>
        <label>AVS Zip</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Code_Response__c</fullName>
        <description>Card Code Response</description>
        <inlineHelpText>CVV/CVV2 has matched or not</inlineHelpText>
        <label>Card Code Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Month__c</fullName>
        <label>Card Expiration Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Year__c</fullName>
        <label>Card Expiration Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Exception Message
When a Transaction is created and Payment is not created against Invoice</description>
        <inlineHelpText>Exception Message
When a Transaction is created and Payment is not created against Invoice</inlineHelpText>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gateway_Date__c</fullName>
        <label>Gateway Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gateway_ID__c</fullName>
        <label>Response Gateway ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Processed_Successfully__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It determines whether the Transaction has created Payment and Payment Allocation.
This is only for charged transactions.</description>
        <inlineHelpText>It determines whether the Transaction has created Payment and Payment Allocation.
This is only for charged transactions.</inlineHelpText>
        <label>Payment Process Successful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway__c</fullName>
        <label>Payment Gateway</label>
        <referenceTo>Gateway__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <referenceTo>Payment_Method__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan Installment</label>
        <referenceTo>Payment_Plan_Installment__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Run</label>
        <referenceTo>Payment_Run__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Credit_Card_Number__c</fullName>
        <label>Request - Credit Card Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Request - Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Transaction_Type__c</fullName>
        <label>Request - Transaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Of_Payment__c</fullName>
        <label>Request - Type Of Payment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>TranscationPaymentRun</fullName>
        <columns>NAME</columns>
        <columns>Payment_Run__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Run__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>TranscationPaymentRun</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TRX-{000000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>